<resources>
    <string name="app_name">TechDiversity</string>
    <string name="motto">Striving for more diversity in the technology industry!</string>

    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="join_now">New to TechDiversity? Join Now</string>

    <string name="conferences">Conferences</string>
    <string name="hackathons">Hackathons</string>
    <string name="internships">Internships</string>
    <string name="research">Research</string>
    <string name="scholarships">Scholarships</string>
    
    <string name="microsoft_ds3">Microsoft Research Data Science Summer School</string>
    <string name="ds3_description">The Data Science Summer School (DS3) is an intensive,
        eight-week hands-on introduction to data science for college students in the
        New York City area. Each student receives a $5,000 stipend for participating in the program, as well
        as a laptop.
        DS3 includes both course work in data science and group research projects. The
        summer school is taught by leading scientists at Microsoft Research, and is held
        at the new Microsoft Research office in the heart of New York City.</string>
    <string name="apply">Apply</string>
    <string name="save_for_later">Save for Later</string>
    <string name="not_interested">Not Interested</string>
    <string name="next">Next</string>
    <string name="deadline">Deadline: </string>
    <string name="app_material">Application Materials</string>
</resources>
