<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:src="@drawable/logo" />

        <TextView
            style="@style/AppTheme"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/app_name" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:text="@string/motto"
        android:textSize="25sp" />

    <TextView
        style="@style/CategoriesTheme"
        android:text="@string/conferences" />

    <TextView
        style="@style/CategoriesTheme"
        android:text="@string/hackathons" />

    <TextView
        style="@style/CategoriesTheme"
        android:text="@string/internships" />

    <TextView
        style="@style/CategoriesTheme"
        android:text="@string/research" />

    <TextView
        style="@style/CategoriesTheme"
        android:text="@string/scholarships" />
</LinearLayout>
