<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:src="@drawable/logo" />

        <TextView
            style="@style/OpportunityTitleTheme"
            android:text="@string/microsoft_ds3" />

        <TextView
            style="@style/DeadlineTheme"
            android:text="@string/deadline" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/OpportunityDescriptionTheme"
            android:text="@string/ds3_description" />

        <Button
            style="@style/ActionButtonTheme"
            android:text="@string/next" />

    </LinearLayout>
</ScrollView>
